objects/User_Specific_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Active_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Config_Code__c</fullName>
        <label>Config Code</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_c__c</fullName>
        <label>Description</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <label>User Specific Config</label>
</CustomObject>